ci: switch over to alpine images and update max golang
Move from 1.16 to 1.24 to track latest golang, while also switching to
the alpine images for alignment with libvirt-go-module CI.

Signed-off-by: Daniel P. Berrangé <berrange@redhat.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,13 +30,14 @@ go-fmt:
 .go_build: &go_build
   stage: build
   script:
+    - apk add git
     - go test -timeout 10m -tags xmlroundtrip -v
 
 
 go_1_11:
   <<: *go_build
-  image: golang:1.11
+  image: golang:1.11-alpine
 
-go_1_16:
+go_1_24:
   <<: *go_build
-  image: golang:1.16
+  image: golang:1.16-alpine
